--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -102,7 +102,7 @@ header{
 
 // banner
 .banner{
-    background: url('https://source.unsplash.com/random') center center ;
+    background: url('https://images.unsplash.com/photo-1462556791646-c201b8241a94?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=865&q=80') center center ;
     background-size: cover;
     padding: 6.5rem 0;
     position: relative;
